# google_bigquery_v2

./: .gitignore  Cargo.toml
google_bigquery_v2_derive/: Cargo.toml
google_bigquery_v2_derive/src/: lib.rs
src/: client.rs  lib.rs  prelude.rs
src/data/: bigquery_builder.rs  bigquery_table.rs  mod.rs  query_builder.rs
src/data/param_conversion/: convert_bigquery_params.rs  convert_type_to_big_query_type.rs  mod.rs
tests/: tests.rs
