[package]
name = "google_bigquery_v2"
version = "0.2.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-bigquery2 = "5.0.2"
serde_json = "1.0.95"
tokio = "1.0.2"
google_bigquery_v2_derive = { version = "0.0.2", path = "./google_bigquery_v2_derive" }
chrono = "0.4.24"
nameof = "1.2.2"
env_logger = "0.10.0"
async-trait = "0.1.68"



log = { version = "0.4" }
tracing = { version = "0.1", optional = true }

[features]
default = []
tracing = ["dep:tracing"]
