[package]
name = "google_bigquery_v2"
version = "0.3.0"
edition = "2021"

[dependencies]
google-bigquery2 = "5.0.2"
serde_json = "1.0.95"
tokio = "1.0.2"
google_bigquery_v2_derive = { version = "0.0.2", path = "./google_bigquery_v2_derive" }
chrono = "0.4.24"
nameof = "1.2.2"
env_logger = "0.10.0"
async-trait = "0.1.68"



log = "0.4"
tracing = "0.1"
